# taguette

./: .build.yml  .dockerignore  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  CHANGELOG.md  CITATION.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  MANIFEST.in  Pipfile  README.md  README.rst  _layout.html  about.html  alembic.ini  architecture.dot  bibiography.bib  faq.html  generate.py  getting-started.html  index.html  install.html  jest.config.js  mkdocs.yml  package-lock.json  package.json  paper.bib  paper.md  pyproject.toml  requirements.txt  self-host.html  setup.py  sitemap.xml  tests.py  tos.html  tsconfig.json
.gitlab/issue_templates/: issue_context_planif.md
contrib/: haproxy.conf
contrib/helm/: Chart.yaml  values.yaml
contrib/helm/charts/postgres/: Chart.yaml  values.yaml
contrib/helm/charts/postgres/templates/: deployment.yaml  persistentvolumeclaim.yaml  secret.yaml  service.yaml
contrib/helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
contrib/helm/templates/tests/: test-connection.yaml
contrib/kubernetes/: postgres.yml  taguette.yml
css/: bootstrap.css  custom.css
docs/: about.md  community.md  faq.md  getting-started.md  help-guide.md  index.md  install.md  robots.txt  self-host.md  taguette-comm-resources.html
po/: README.md  de.po  fr_FR.po  javascript.pot  javascript_de.po  javascript_de_DE.po  javascript_el.po  javascript_el_GR.po  javascript_es.po  javascript_es_ES.po  javascript_fr.po  javascript_fr_FR.po  javascript_id.po  javascript_id_ID.po  javascript_it.po  javascript_it_IT.po  javascript_nl.po  javascript_nl_NL.po  javascript_pt.po  javascript_pt_BR.po  javascript_sv.po  main.pot  main_de.po  main_de_DE.po  main_el.po  main_el_GR.po  main_es.po  main_es_ES.po  main_fr.po  main_fr_FR.po  main_id.po  main_id_ID.po  main_it.po  main_it_IT.po  main_nl.po  main_nl_NL.po  main_pt.po  main_pt_BR.po  main_sv.po  taguette.pot  (+4 more)
scripts/: babelrc  export_project.py  generate.py  make_password_reset_link.py  new_db_revision.sh  register_user.py  update_pot.sh  update_translations.sh  validate.py  wipe_and_disable_user.py
tagger/: __main__.py  auth.py  convert.py  database.py  login.py  models.py  web.py
tagger/static/css/: custom.css
tagger/static/js/: tagger.js
tagger/templates/: base.html  index.html  project.html  project_new.html  welcome.html
taguette/: __init__.py  convert.py  database.py  export.py  extract.py  hibp.py  import_codebook.py  main.py  metrics.py  refi_qda.py  terminal_tk.py  utils.py  validate.py  web.py
taguette/database/: __init__.py  base.py  copy.py  models.py
taguette/indexer/: __init__.py  typesense.py
taguette/migrations/: env.py
taguette/migrations/versions/: 09c662cd9483_make_documents_filename_not_null.py  382db36f20f4_add_user_disabled.py  43d6c240309d_remove_document_groups.py  447d636f72c5_cascades.py  491de2dc7cd7_add_indexes.py  63d7ca28fc0c_add_parent_id_column_to_tags_table.py  6489b5f9cfb5_increase_password_hash_size.py  679f625e6e6a_fix_unique_tags.py  807c0cc0ecf6_remove_invalid_hltags.py  80b1cc9d4c22_add_user_email.py  8359b64e149f_mysql_longtext.py  91ade71ccf4d_add_user_language.py  b23f3b7a638e_add_user_password_change_date.py  bc8e0e0677e9_rename_command_fields.py  bce44849c2f2_lowercase_logins.py  d86c45d7aa8a_add_document_direction.py  db5e31a0233d_remove_blank_highlights.py  dd37d9027a24_unique_tags.py  e2c673393d89_make_user_email_lowercase.py  e4cf92942271_add_index.py  e4e090a5b511_remove_commands_document_id_fk.py  ecb4065de575_don_t_use_server_default_now_timezone_.py
taguette/static/: robots.txt
taguette/static/css/: bootstrap.css  bootstrap.min.css  custom.css  hierarchy-select.min.css
taguette/static/js/: bootstrap-treeview.min.js  hierarchy-select.min.js  jquery-3.7.1.min.js  tag-hierarchy.js  tag-treeview.js  tagger.js  taguette.js
taguette/static/webfonts/: BadScript-OFL.txt
taguette/templates/: account.html  base.html  cookies_prompt.html  email_reset_password.html  email_reset_password.txt  error.html  export_codebook.html  export_document.html  export_highlights.html  index.html  login.html  messages.js  new_password.html  project.html  project_delete.html  project_import.html  project_import_codebook.html  project_import_codebook_confirm.html  project_new.html  reset_password.html  token_needed.html  tos.html  trans.js  welcome.html
taguette/templates/modal/: create_highlight.html  create_tag.html  merge_tag.html
taguette/web/: __init__.py  api.py  base.py  export.py  refi_qda.py  views.py
tests/: README.md  rungit.sh
ui-src/: main.test.ts  main.ts
