[project]
name = "taguette"
version = "1.4.1"
description = "Free and open source qualitative research tool"

license = "BSD-3-Clause"

authors = [
    { name = "Remi Rampin", email = "remi@rampin.org" },
]

readme = "README.rst"

repository = "https://gitlab.com/remram44/taguette"
homepage = "https://www.taguette.org/"

keywords = ["qualitative", "document", "text", "tagging", "tags", "highlights", "notes"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: JavaScript",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Text Processing",
]

requires-python = ">=3.10,<4"

dependencies = [
    "alembic >=1.6,<1.9",
    "beautifulsoup4",
    "bleach >=3,<6",
    "chardet >=4,<6",
    "html5lib >=1,<2",
    "importlib-resources",
    "jinja2 >=3.1,<3.2",
    "opentelemetry-api >=1.5,<1.11",
    "prometheus-async",
    "prometheus-client",
    "redis >=3,<5",
    "sentry-sdk",
    "setuptools", # opentelemetry-api requires pkg_resources
    "SQLAlchemy >=1.4,<1.5",
    "subtitle-parser >=1,<3",
    "tornado >=6.1",
    "XlsxWriter >=1.4,<4",
]

[project.urls]
"Bug Tracker" = "https://gitlab.com/remram44/taguette/-/issues"
"Documentation" = "https://www.taguette.org/getting-started.html"
"Chat" = "https://app.element.io/#/room/#taguette:matrix.org"
"User Mailing List" = "https://groups.io/g/taguette"
"Open Collective" = "https://opencollective.com/taguette"

[project.optional-dependencies]
otel = [
    "opentelemetry-distro",
    "opentelemetry-instrumentation-sqlalchemy >=0.24b0,<0.26",
    "opentelemetry-instrumentation-tornado >=0.24b0,<0.26",
]
postgres = [
    "psycopg2 >=2.8,<3",
]
mysql = [
    "pymysql >=1.0,<2",
    "cryptography",
]

[dependency-groups]
dev = [
    "coverage",
    "flake8",
    "readme_renderer",
    "babel >=2.6,<3",
    "bcrypt >=3.2.0,<4",
    "aiohttp >=3.4,<4",
    "selenium >=4.5,<4.6",
]
i18n = [
    "babel >=2.6,<3",
]
pyinstaller = [
    "pyinstaller",
]

[tool.uv]
default-groups = ["dev", "i18n"]

[project.scripts]
taguette = "taguette.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "taguette/**/*.py",

    "CHANGELOG.md",
    "tests.py",
    "CITATION.txt",
    # automatically included: LICENSE.txt README.rst

    # Following is common with wheel build
    "taguette/static/missing.png",
    "taguette/static/favicon.png",
    "taguette/static/css/*.css",
    "taguette/static/*.css.map",
    "taguette/static/js/*.js",
    "taguette/static/js/*.js.map",
    "taguette/static/webfonts/*",
    "taguette/templates/*.html",
    "taguette/templates/*.txt",
    "taguette/templates/*.js",
    "taguette/migrations/env.py",
    "taguette/migrations/script.py.mako",
    "taguette/migrations/versions/*.py",
    "taguette/l10n/*/*/*.mo",
]

[tool.hatch.build.targets.wheel]
include = [
    "taguette/**/*.py",

    # Following is common with sdist build
    "taguette/static/missing.png",
    "taguette/static/favicon.png",
    "taguette/static/css/*.css",
    "taguette/static/*.css.map",
    "taguette/static/js/*.js",
    "taguette/static/js/*.js.map",
    "taguette/static/webfonts/*",
    "taguette/templates/*.html",
    "taguette/templates/*.txt",
    "taguette/templates/*.js",
    "taguette/migrations/env.py",
    "taguette/migrations/script.py.mako",
    "taguette/migrations/versions/*.py",
    "taguette/l10n/*/*/*.mo",
]
